@@ -1,3 +1,6 @@
+* adjusted links to new home on oss.oetiker.ch
+  -- tobi
+
 2006/4/14 -- released version 20060414_trunk
 
 2006/4/13 -- released version 20060413_trunk
